# telegram-bot-for-fastapi-backend

./: .gitignore  Dockerfile  Makefile  pyproject.toml  settings.py
app/: main.py  settings.py
app/consumers/: handlers.py  main.py  schemas.py
app/containers/: providers.py
app/dtos/: messages.py
app/exceptions/: base.py  chats.py
app/handlers/: chats.py  constants.py  errors.py
app/handlers/converters/: chats.py
app/services/: constants.py  web.py
app/services/converters/: chats.py
containers/: factories.py  providers.py
docker_compose_bot/: bot.yaml  consumer.yaml
dtos/: messages.py
exceptions/: base.py  chats.py
handlers/: base.py  chats.py
handlers/converters/: chats.py
services/: constants.py  web.py
services/converters/: chats.py
